# QRBuilder

./: .gitignore  CMakeLists.txt  CMakeListsLinux.txt  CMakeListsWindows.txt  Info.plist.in  LICENSE  README.md  icon.rc  main.cpp  resource.h
resources/: icon.icns
scripts/: fix_rpath.sh
